--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <p>Program Management (Current)</p>
 
+
     <p>Security Vulernability Workflow for Operations Team (Current)Jira Rich Filter Dashboard</p>
 
     <p>Quality Assuarnce Workflow with 8 Discipline (8D) Implementation</p>
@@ -18,7 +19,13 @@
     <p>Management Team Prioritization Workflow</p>
 
     <p>Application Admin Tasks</p>
-
+    <ul>
+        <li>review all plugin usage - review to see which one used most often...aything applicable to next upgrade/release</li>
+        <li>test all plugins (confluence and jira) after minor/major upgrades</li>
+        <li>prep and update plugins in dev (test) > staging (test) > prod (verify in prod that all plugins function as expected)</li>
+        <li>run test, work with plugin vendor(s) to resolve issues (if any) then retest with applicable upgrade version</li>
+        
+    </ul>
 
 </body>
 </html>
