Update pill badges and work history.html

--- a/index.html
+++ b/index.html
@@ -175,31 +175,30 @@
     <h2>Resume</h2>
     <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Skills and Technologies</h2>
     <div>
-      <span class="badge">Jira</span>
+      <span class="badge">Jira/Service Desk</span>
       <span class="badge">Confluence</span>
       <span class="badge">Agile</span>
       <span class="badge">ServiceNow</span>
       <span class="badge">Waterfall</span>
       <span class="badge">SharePoint</span>
       <span class="badge">Postman</span>
-      <span class="badge">IBM Rational ClearCase</span>
-      <span class="badge">IBM Rational ClearQuest</span>
-      <span class="badge">Fisheye/Crucible</span>
-      <span class="badge">Rally</span>
+      <span class="badge">PRTG</span>
+      <span class="badge">PowerShell</span>
       <span class="badge">Linux</span>
       <span class="badge">MacOS</span>
       <span class="badge">Windows</span>
       <span class="badge">Office 365</span>
+      <span class="badge">Excel</span>
       <span class="badge">Adobe Acrobat</span>
       <span class="badge">AS9100:D</span>
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
-    <h4>Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–Present)</h4>
+    <h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–Present)</h4>
     <ul style="padding-left: 1.5rem;">
       <li>Oversaw quality documentation compliance, conducted internal audits with reporting to leadership, coordinated document updates to meet AS9100 Rev. D standards, and supported key Quality department functions including change control, validation, corrective actions, and certifications.</li>
     </ul>
-    <br><h4>Systems Developer/Software Configuration Mangement Engineer | Pearson (2005–Present)</h4>
+    <br><h4>Systems Developer/Software Configuration Mangement Engineer | Pearson (2005–2016)</h4>
 <ul style="padding-left: 1.5rem;">
       <li>Managed technical documentation and software licensing, resolved application issues, led Jira project implementations and training, collaborated across teams to improve processes, and served as a key liaison for tools support, onboarding, and software procurement.</li>
 </ul>
@@ -251,7 +250,7 @@
     </div>
     <div class="tab-content">A custom Jira workflow based on the 8D methodology was successfully implemented for a new Quality Assurance (QA) team, replacing spreadsheets, improving efficiency, enabling real-time reporting, and saving costs.
         <br><br><ul style="padding-left: 1.5rem;">
-        <li>Challenge: A newly formed Quality Assurance (QA) team lacked a dedicated system to track and manage QA-related activities. The team, which had grown to over 30 members, was relying on Excel spreadsheets, making it difficult to maintain consistent processes, track progress, and generate reliable reports.</li>
+        <li><strong></strong>Challenge:</strong> A newly formed Quality Assurance (QA) team lacked a dedicated system to track and manage QA-related activities. The team, which had grown to over 30 members, was relying on Excel spreadsheets, making it difficult to maintain consistent processes, track progress, and generate reliable reports.</li>
         <li>Solution:</li>
         <li>Results:</li>
     </ul>
