--- a/index.html
+++ b/index.html
@@ -249,12 +249,7 @@
     </ul>
     </div>
     <div class="tab-content">A custom Jira workflow based on the 8D methodology was successfully implemented for a new Quality Assurance (QA) team, replacing spreadsheets, improving efficiency, enabling real-time reporting, and saving costs.
-        <br><br><ul style="padding-left: 1.5rem;">
-        <li><strong></strong>Challenge:</strong> A newly formed Quality Assurance (QA) team lacked a dedicated system to track and manage QA-related activities. The team, which had grown to over 30 members, was relying on Excel spreadsheets, making it difficult to maintain consistent processes, track progress, and generate reliable reports.</li>
-        <li>Solution:</li>
-        <li>Results:</li>
-    </ul>
-    <br><a href="8D_Case Study.pdf" target="_blank">View Details &#8594</a>
+    <br><a href="QA_Jira_Workflow_Case_Study_Portfolio.pdf" target="_blank">View Details &#8594</a>
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
