Update QA Case Study PDF file name to match new upload.html

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </ul>
     </div>
     <div class="tab-content">A custom Jira workflow based on the 8D methodology was successfully implemented for a new Quality Assurance (QA) team, replacing spreadsheets, improving efficiency, enabling real-time reporting, and saving costs.
-    <br><a href="QA_Jira_Workflow_Case_Study_Portfolio.pdf" target="_blank">View Details &#8594</a>
+    <br><a href="Implementing a Custom Jira Workflow for QA.pdf" target="_blank">View Details &#8594</a>
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
