Added more case studies.html

--- a/index.html
+++ b/index.html
@@ -178,11 +178,12 @@
       <span class="badge">Jira/Service Desk</span>
       <span class="badge">Confluence</span>
       <span class="badge">Agile</span>
-      <span class="badge">ServiceNow</span>
+      <span class="badge">SAFe</span>
       <span class="badge">Waterfall</span>
+      <span class="badge">ServiceNow</span>
       <span class="badge">SharePoint</span>
       <span class="badge">Postman</span>
-      <span class="badge">PRTG</span>
+      <span class="badge">Paessler PRTG</span>
       <span class="badge">PowerShell</span>
       <span class="badge">Linux</span>
       <span class="badge">MacOS</span>
@@ -219,20 +220,17 @@
     <p>While much of my work is proprietary, here are selected projects I've worked on.</p>
     <br>
     <div class="tabs">
-      <button class="tab-button active" onclick="showTab(0)">Wiki Cleanup Across 8 Teams (Current)</button>
+      <button class="tab-button active" onclick="showTab(0)">Wiki Cleanup to Align with Product Releases Across Engineering Teams*</button>
       <button class="tab-button" onclick="showTab(1)">Security Vulnerability Workflow for Operations Team (Current)</button>
       <button class="tab-button" onclick="showTab(2)">Jira Rich Filter Dashboard Development</button>
-      <button class="tab-button" onclick="showTab(3)">Quality Assurance Team Workflow with 8D Implementation</button>
+      <button class="tab-button" onclick="showTab(3)">Implementing Custom Jira Workflow For Quality Assurance</button>
       <button class="tab-button" onclick="showTab(4)">Security Team Workflow</button>
-      <button class="tab-button" onclick="showTab(5)">Streamlining Risk Management Process + Migration</button>
+      <button class="tab-button" onclick="showTab(5)">Streamlining Risk Management and Migration</button>
       <button class="tab-button" onclick="showTab(6)">Daily Application Admin Tasks</button>
     </div>
-    <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base.
-    <br><br><ul style="padding-left: 1.5rem;">
-        <li>Challenge: </li>
-        <li>Solution:</li>
-        <li>Results:</li>
-    </ul>
+    <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
+    <br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
+
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
@@ -249,7 +247,7 @@
     </ul>
     </div>
     <div class="tab-content">A custom Jira workflow based on the 8D methodology was successfully implemented for a new Quality Assurance (QA) team, replacing spreadsheets, improving efficiency, enabling real-time reporting, and saving costs.
-    <br><a href="Implementing a Custom Jira Workflow for QA.pdf" target="_blank">View Details &#8594</a>
+    <br><a href="Case Studies.pdf" target="_blank">View Details &#8594</a>
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
@@ -258,12 +256,9 @@
         <li>Results:</li>
     </ul>
     </div>
-    <div class="tab-content">A cross-functional team streamlined risk tracking and agile workflows for 8 engineering teams by implementing a unified Jira system to enhance visibility, efficiency, and executive reporting across 50+ users.
-        <br><br><ul style="padding-left: 1.5rem;">
-        <li>Challenge:</li>
-        <li>Solution:</li>
-        <li>Results:</li>
-    </ul>
+    <div class="tab-content">Streamlined risk management and agile workflows for 8 engineering teams was successfully implemented by developing a unified Jira system to enhance visibility, efficiency, and executive reporting across 50+ users.
+    <br><a href="Case Studies (1).pdf" target="_blank">View Details &#8594</a>
+
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
@@ -279,7 +274,7 @@
   <section id="about" class="fade-in">
     <h2>About Me</h2>
       <p>Greetings! I’m a results-oriented professional with a strong technical and process-driven background, currently seeking a new challenge. As an innovative and dedicated Systems Developer, I bring deep expertise in systems and application development, with a strong focus on project management and successful delivery.</p>
-      <br><p>I have solid knowledge of Agile Scrum, Software Development Life Cycle (SDLC) methodologies, and Information Technology InfrastructureLibrary (ITIL). One of my key strengths is building strong relationships with both internal and external stakeholders. Additionally, my broad experience with Atlassian tools (i.e., Jira Service Management, Jira Software, and Confluence) makes me a valuable asset to any organization.</p>
+      <br><p>I have solid knowledge of Agile Scrum, Software Development Life Cycle (SDLC) methodologies, and Information Technology Infrastructure Library (ITIL). One of my key strengths is building strong relationships with both internal and external stakeholders. Additionally, my broad experience with Atlassian tools (i.e., Jira Service Management, Jira Software, and Confluence) makes me a valuable asset to any organization.</p>
       <br><p>I’m creative, resourceful, and adaptable to ever-changing environments, and I’m always eager to learn new software, programs, or methodologies to meet the demands of a new opportunity. I enjoy industry networking and am excited to take on my next role. Please feel free to connect with me on LinkedIn. Here’s to continued professional success!</p>
       <br><a href="https://www.linkedin.com/in/kdadisman/" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">LinkedIn</a>
       <a href="https://kelly-nd.github.io/portfolio" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">GitHub</a>
