Updated css a:link and added line breaks.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       margin: auto;
     }
 
+    a:link {
+      color: #b56f45;
+      text-decoration: none
+    }
+    
     h1, h2 {
       
       color: #5a3c29;
@@ -229,7 +234,7 @@
       <button class="tab-button" onclick="showTab(6)">Daily Application Admin Tasks</button>
     </div>
     <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
-    <br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
+    <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
 
     </div>
     <div class="tab-content">[summary]
@@ -247,7 +252,7 @@
     </ul>
     </div>
     <div class="tab-content">A custom Jira workflow based on the 8D methodology was successfully implemented for a new Quality Assurance (QA) team, replacing spreadsheets, improving efficiency, enabling real-time reporting, and saving costs.
-    <br><a href="Case Studies.pdf" target="_blank">View Details &#8594</a>
+    <br><br><a href="Case Studies.pdf" target="_blank">View Details &#8594</a>
     </div>
     <div class="tab-content">[summary]
         <br><br><ul style="padding-left: 1.5rem;">
@@ -257,7 +262,7 @@
     </ul>
     </div>
     <div class="tab-content">Streamlined risk management and agile workflows for 8 engineering teams was successfully implemented by developing a unified Jira system to enhance visibility, efficiency, and executive reporting across 50+ users.
-    <br><a href="Case Studies (1).pdf" target="_blank">View Details &#8594</a>
+    <br><br><a href="Case Studies (1).pdf" target="_blank">View Details &#8594</a>
 
     </div>
     <div class="tab-content">[summary]
