Updated Skills and Technologies.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <h2>Resume</h2>
     <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Skills and Technologies</h2>
     <div>
-      <span class="badge">Jira/Service Desk</span>
+      <span class="badge">JIRA</span>
       <span class="badge">Confluence</span>
       <span class="badge">Agile</span>
       <span class="badge">SAFe</span>
@@ -197,6 +197,7 @@
       <span class="badge">Excel</span>
       <span class="badge">Adobe Acrobat</span>
       <span class="badge">AS9100:D</span>
+      <span class="badge">GitHub</span>
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
@@ -222,7 +223,7 @@
 
   <section id="case-studies" class="fade-in">
     <h2>Case Studies</h2>
-    <p>While much of my work is proprietary, here are selected projects I've worked on.</p>
+    <p>While much of my work is proprietary, here are selected projects I can share.</p>
     <br>
     <div class="tabs">
       <button class="tab-button active" onclick="showTab(0)">Wiki Cleanup to Align with Product Releases Across Engineering Teams*</button>
