Added "Principal" to QA Analyst role.html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <section id="home" class="fade-in">
     <h1>Kelly Dadisman, CSM</h1>
-    <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Systems Developer & Quality Assurance Analyst</h2>
+    <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Systems Developer & Principal Quality Assurance Analyst</h2>
     <p>I deliver quality assurance rooted in system development and program management—empowering product teams and elevating the SaaS user experience.</p>
       <br><a href="#case-studies" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">View Work</a>
       <a href="#about" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.9rem; border-radius: 5px; text-decoration: none; font-weight: bold;">Contact Me</a>
