--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <br><p>I have solid knowledge of Agile Scrum, Software Development Life Cycle (SDLC) methodologies, and Information Technology Infrastructure Library (ITIL). One of my key strengths is building strong relationships with both internal and external stakeholders. Additionally, my broad experience with Atlassian tools (i.e., Jira Service Management, Jira Software, and Confluence) makes me a valuable asset to any organization.</p>
       <br><p>I’m creative, resourceful, and adaptable to ever-changing environments, and I’m always eager to learn new software, programs, or methodologies to meet the demands of a new opportunity. I enjoy industry networking and am excited to take on my next role. Please feel free to connect with me on LinkedIn. Here’s to continued professional success!</p>
       <br><a href="https://www.linkedin.com/in/kdadisman/" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">LinkedIn</a>
-      <a href="https://kelly-nd.github.io/portfolio" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">GitHub</a>
+      <a href="https://github.com/kelly-nd" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">GitHub</a>
   
   </section>
 
