--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      position: sticky;
+      position: fixed;
       top: 0;
       z-index: 1000;
     }
