--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
     <br>
     <div class="tabs">
       <button class="tab-button active" onclick="showTab(0)">Wiki Cleanup to Align with Product Releases Across Engineering Teams*</button>
-      <button class="tab-button" onclick="showTab(1)">Security Vulnerability Workflow for Operations Team (Current)</button>
+      <button class="tab-button" onclick="showTab(1)">Security Workflows with Custom Jira Integration</button>
       <button class="tab-button" onclick="showTab(2)">Implementing Custom Jira Workflow For Quality Assurance</button>
       <button class="tab-button" onclick="showTab(3)">Streamlining Risk Management and Migration</button>
-      <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks</button>
+      <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks (Current)</button>
     </div>
     <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
     <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
