Updated experience with 2022-present.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
-    <h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–Present)</h4>
+    <h4>Principal Software Engineer | Northrop Grumman (2022-Present)
+      <ul style="padding-left: 1.5rem;">
+      <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
+    </ul>
+    <h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–2022)</h4>
     <ul style="padding-left: 1.5rem;">
       <li>Oversaw quality documentation compliance, conducted internal audits with reporting to leadership, coordinated document updates to meet AS9100 Rev. D standards, and supported key Quality department functions including change control, validation, corrective actions, and certifications.</li>
     </ul>
