--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
-    <h4>Principal Software Engineer | Northrop Grumman (2022-Present)
+    <h4>Principal Software Engineer | Northrop Grumman (2022-Present)</h4>
       <ul style="padding-left: 1.5rem;">
       <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
     </ul>
