--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <ul style="padding-left: 1.5rem;">
       <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
     </ul>
-    <h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–2022)</h4>
+    <br><h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–2022)</h4>
     <ul style="padding-left: 1.5rem;">
       <li>Oversaw quality documentation compliance, conducted internal audits with reporting to leadership, coordinated document updates to meet AS9100 Rev. D standards, and supported key Quality department functions including change control, validation, corrective actions, and certifications.</li>
     </ul>
