Update case studies details.html

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
   <section id="home" class="fade-in">
     <h1>Kelly Dadisman, CSM</h1>
-    <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Systems Developer & Principal Quality Assurance Analyst</h2>
-    <p>I deliver quality assurance rooted in system development and program management—empowering product teams and elevating the SaaS user experience.</p>
+    <h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Principal Software Engineer (Service Delivery)</h2>
+    <p>I drive software quality through a strong foundation in systems development and program management, enabling product teams and enhancing the user experience.</p>
       <br><a href="#case-studies" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">View Work</a>
       <a href="#about" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.9rem; border-radius: 5px; text-decoration: none; font-weight: bold;">Contact Me</a>
   </section>
@@ -193,14 +193,13 @@
       <span class="badge">MacOS</span>
       <span class="badge">Windows</span>
       <span class="badge">Office 365</span>
-      <span class="badge">Excel</span>
       <span class="badge">Adobe Acrobat</span>
       <span class="badge">AS9100:D</span>
       <span class="badge">GitHub</span>
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
-    <h4>Principal Software Engineer | Northrop Grumman (2022-Present)</h4>
+    <h4>Principal Software Engineer (Service Delivery) | Northrop Grumman (2022-Present)</h4>
       <ul style="padding-left: 1.5rem;">
       <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
     </ul>
@@ -232,11 +231,12 @@
       <button class="tab-button active" onclick="showTab(0)">Wiki Cleanup to Align with Product Releases Across Engineering Teams*</button>
       <button class="tab-button" onclick="showTab(1)">Security Workflows with Custom Jira Integration</button>
       <button class="tab-button" onclick="showTab(2)">Implementing Custom Jira Workflow For Quality Assurance</button>
-      <button class="tab-button" onclick="showTab(3)">Streamlining Risk Management and Migration</button>
-      <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks (Current)</button>
+      <button class="tab-button" onclick="showTab(3)">Streamlining Risk Management and Prioritization</button>
+      <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks*</button>
     </div>
     <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
-    <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
+    <p>*Denotes this project is ongoing</p>
+      <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
     </div>
     
     <div class="tab-content">A custom Jira workflow and dashboard were implemented in just three months to streamline security vulnerability tracking, reduce manual effort, and give managers real-time visibility into team progress and remediation efforts.
@@ -251,8 +251,9 @@
     <br><br><a href="Case Studies (1).pdf" target="_blank">View Details &#8594</a>
     </div>
     
-    <div class="tab-content">A proactive Jira Admin streamlined day-to-day operations by resolving user issues, implementing automation, managing migrations, deploying helpful plugins, and upgrading Atlassian tools—resulting in improved efficiency, usability, and user satisfaction.
-    <br><br><a href="Case Studies (4).pdf" target="_blank">View Details &#8594</a>
+    <div class="tab-content">As a proactive Jira Admin, I streamline day-to-day operations by resolving user issues, implementing automation, managing migrations, deploying helpful plugins, and upgrading Atlassian tools. This results in improved efficiency, usability, and user satisfaction.
+        <p>*Denotes this project is ongoing</p>
+      <br><br><a href="Case Studies (4).pdf" target="_blank">View Details &#8594</a>
 
     </div>
   </section>
@@ -262,7 +263,7 @@
   <section id="about" class="fade-in">
     <h2>About Me</h2>
       <p>Greetings! I’m a results-oriented professional with a strong technical and process-driven background, currently seeking a new challenge. As an innovative and dedicated Systems Developer, I bring deep expertise in systems and application development, with a strong focus on project management and successful delivery.</p>
-      <br><p>I have solid knowledge of Agile Scrum, Software Development Life Cycle (SDLC) methodologies, and Information Technology Infrastructure Library (ITIL). One of my key strengths is building strong relationships with both internal and external stakeholders. Additionally, my broad experience with Atlassian tools (i.e., Jira Service Management, Jira Software, and Confluence) makes me a valuable asset to any organization.</p>
+      <br><p>I have solid knowledge of Agile Scrum, Software Development Life Cycle (SDLC) methodologies. One of my key strengths is building strong relationships with both internal and external stakeholders. Additionally, my broad experience with Atlassian tools (i.e., Jira Service Management, Jira Software, and Confluence) makes me a valuable asset to any organization.</p>
       <br><p>I’m creative, resourceful, and adaptable to ever-changing environments, and I’m always eager to learn new software, programs, or methodologies to meet the demands of a new opportunity. I enjoy industry networking and am excited to take on my next role. Please feel free to connect with me on LinkedIn. Here’s to continued professional success!</p>
       <br><a href="https://www.linkedin.com/in/kdadisman/" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">LinkedIn</a>
       <a href="https://github.com/kelly-nd" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; text-decoration: none; font-weight: bold;">GitHub</a>
