--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
       <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks*</button>
     </div>
     <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
-    <p>*Denotes this project is ongoing</p>
-      <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
+    <br><em>*Denotes this project is ongoing</em>
+    <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
     </div>
     
     <div class="tab-content">A custom Jira workflow and dashboard were implemented in just three months to streamline security vulnerability tracking, reduce manual effort, and give managers real-time visibility into team progress and remediation efforts.
@@ -252,7 +252,7 @@
     </div>
     
     <div class="tab-content">As a proactive Jira Admin, I streamline day-to-day operations by resolving user issues, implementing automation, managing migrations, deploying helpful plugins, and upgrading Atlassian tools. This results in improved efficiency, usability, and user satisfaction.
-        <p>*Denotes this project is ongoing</p>
+      <br><em>*Denotes this project is ongoing</em>
       <br><br><a href="Case Studies (4).pdf" target="_blank">View Details &#8594</a>
 
     </div>
