Updated case studies details.html

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
       <span class="badge">Certified Scrum Master</span>
     </div>
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
-    <h4>Principal Software Engineer (Service Delivery) | Northrop Grumman (2022-Present)</h4>
+    <h4>Principal Software Engineer (Service Delivery) | Northrop Grumman (2022–Present)</h4>
       <ul style="padding-left: 1.5rem;">
       <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
     </ul>
-    <br><h4>Principal Quality Assurance Analyst | Northrop Grumman - Astro Aerospace (2017–2022)</h4>
+    <br><h4>Principal Quality Assurance Analyst | Northrop Grumman – Astro Aerospace (2017–2022)</h4>
     <ul style="padding-left: 1.5rem;">
       <li>Oversaw quality documentation compliance, conducted internal audits with reporting to leadership, coordinated document updates to meet AS9100 Rev. D standards, and supported key Quality department functions including change control, validation, corrective actions, and certifications.</li>
     </ul>
@@ -233,8 +233,10 @@
       <button class="tab-button" onclick="showTab(2)">Implementing Custom Jira Workflow For Quality Assurance</button>
       <button class="tab-button" onclick="showTab(3)">Streamlining Risk Management and Prioritization</button>
       <button class="tab-button" onclick="showTab(4)">Daily Application Admin Tasks*</button>
+      <button class="tab-button" onclick="showTab(5)">Change Advisory Board (CAB) Workflow</button>
+
     </div>
-    <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (40% completed within the first 6 months).
+    <div class="tab-content active">Led a documentation audit across 8 engineering teams, streamlining thousands of outdated Confluence pages into a clean, accurate knowledge base. This effort is currently in progress (60% completed within the first 6 months).
     <br><em>*Denotes this project is ongoing</em>
     <br><br><a href="Case Studies (2).pdf" target="_blank">View Details &#8594</a>
     </div>
@@ -254,6 +256,11 @@
     <div class="tab-content">As a proactive Jira Admin, I streamline day-to-day operations by resolving user issues, implementing automation, managing migrations, deploying helpful plugins, and upgrading Atlassian tools. This results in improved efficiency, usability, and user satisfaction.
       <br><em>*Denotes this project is ongoing</em>
       <br><br><a href="Case Studies (4).pdf" target="_blank">View Details &#8594</a>
+
+    </div>
+
+    <div class="tab-content">[summary
+      <br><br><a href="Case Studies (5).pdf" target="_blank">View Details &#8594</a>
 
     </div>
   </section>
