--- a/index.html
+++ b/index.html
@@ -219,7 +219,18 @@
   <div style="text-align: center; margin-top: 2rem;">
     <button onclick="openModal()" style="background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; border: none; font-weight: bold; cursor: pointer;">Recognition & Awards</button>
   </div>
-    
+      <!-- Modal Structure -->
+  <div id="myModal" style="display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5);">
+    <div style="background-color: #fff; margin: 10% auto; padding: 20px; border: 1px solid #888; width: 80%; max-width: 400px; border-radius: 8px; position: relative;">
+      <span onclick="closeModal()" style="position: absolute; top: 10px; right: 15px; color: #aaa; font-size: 24px; font-weight: bold; cursor: pointer;">&times;</span>
+      <h2 style="color: #5a3c29;">Recognition & Awards</h2>
+      <p>Selected for Northrop's Metnoring the Technical Proessional Programs for 2025</p>
+      <p>Selected as top performer in Service Delivery 2024</p>
+      <p>Received 2 Bravo Awards for the Quality Assurance workflow effort</p>
+      <p>Received multiple Barvo awards for providing exceptional service to customers</p>
+      <p>Received Bravo Award for data migration efforts</p>
+    </div>
+  </div>
     <div style="margin-top: 1.5rem;">
       <a href="#about" target="_blank" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.9rem; border-radius: 5px; text-decoration: none; font-weight: bold;">Download Full Resume</a>
     </div>
