--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 </ul>
   <!-- Modal Trigger Button -->
   <div style="text-align: center; margin-top: 2rem;">
-    <button onclick="openModal()" style="background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; border: none; font-weight: bold; cursor: pointer;">Recognition & Awards</button>
+    <button onclick="openModal()" style="flex: 1 1 auto; text-align: center; background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.9rem; border-radius: 5px; text-decoration: none; font-weight: bold; cursor: pointer;">Recognition & Awards</button>
   </div>
       <!-- Modal Structure -->
   <div id="myModal" style="display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5);">
