--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 </ul>
   <!-- Modal Trigger Button -->
   <div style="margin-top: 1.5rem;">
-    <button onclick="openModal()" style="background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; border: none; font-weight: bold; cursor: pointer;">Recognition & Awards</button>
+    <button onclick="openModal()" style="background-color: #a1674a; color: #fff2e6; padding: 0.4rem 0.6rem; border-radius: 5px; border: 5px; font-weight: bold; cursor: pointer;">Recognition & Awards</button>
   </div>
       <!-- Modal Structure -->
   <div id="myModal" style="display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5);">
@@ -228,9 +228,8 @@
         <li>Selected for Northrop's Metnoring the Technical Proessional Programs 2025</li>
         <li>Selected as top performer in Service Delivery 2024</li>
         <li>Received 2 Bravo Awards for the Quality Assurance workflow effort</li>
-        <li>Received multiple Barvo awards for providing exceptional service to customers</li>
+        <li>Received multiple Barvo Awards for providing exceptional service to customers</li>
         <li>Received Bravo Award for data migration efforts</li>
-        <li></li>
       </ul>
     </div>
   </div>
