Updated current ng description.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <br><h2 style="font-size: 1.5rem; font-weight: normal; color: #7c4d35; margin-top: -0.5rem;">Experience</h2>
     <h4>Principal Software Engineer (Service Delivery) | Northrop Grumman (2022–Present)</h4>
       <ul style="padding-left: 1.5rem;">
-      <li>Managing eazyBI and supported Atlassian tools, primarily Confluence and Jira, including evaluating plugins and implementing approved configuration updates.</li>
+      <li>Currently a Principal Software Engineer and JIRA and Confluence SME evaluating plugins, updating workflows, designing user-friendly Confluence pages, integrating JIRA data, creating dynamic dashboards and reports, managing project migrations, and building a comprehensive knowledge base.</li>
     </ul>
     <br><h4>Principal Quality Assurance Analyst | Northrop Grumman – Astro Aerospace (2017–2022)</h4>
     <ul style="padding-left: 1.5rem;">
