--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <span onclick="closeModal()" style="position: absolute; top: 10px; right: 15px; color: #aaa; font-size: 24px; font-weight: bold; cursor: pointer;">&times;</span>
       <h2 style="color: #5a3c29;">Recognition & Awards</h2>
       <ul>
-        <li>Selected for Northrop's Metnoring the Technical Proessional Programs 2025</li>
+        <li>Selected for Northrop's Mentoring the Technical Professional Programs 2025</li>
         <li>Selected as top performer in Service Delivery 2024</li>
         <li>Received 2 Bravo Awards for the Quality Assurance workflow effort</li>
         <li>Received multiple Barvo Awards for providing exceptional service to customers</li>
